--- a/Aim2/code/Python/viirs_swath2grid-MaxFRP.ipynb
+++ b/Aim2/code/Python/viirs_swath2grid-MaxFRP.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "652e9667-ea08-4b6a-97d0-dec73a5242b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Reads VIIRS NetCDF files (active fire and geolocation data)\n",
+    "Converts the swath to grid using geolocation information\n",
+    "Creates a geolocated active fire product representing maximum FRP for the duration of a fire event\n",
+    "\n",
+    "Author: maxwell.cook@colorado.edu\n",
+    "\"\"\"\n",
+    "\n",
     "# Import packages\n",
+    "\n",
     "import os, shutil, time, glob, warnings, math\n",
     "import earthaccess\n",
     "import pandas as pd\n",
@@ -47,6 +48,7 @@
     "# File path information\n",
     "maindir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire'\n",
     "datadir = os.path.join(maindir,'Aim2/data/spatial/raw/VIIRS/')\n",
+    "dataoutdir = os.path.join(maindir,'Aim2/data/spatial/mod/VIIRS/')\n",
     "\n",
     "# File path information\n",
     "print(\"Success !\")"
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1b3a3566-b1cd-4ca3-8c29-4c157fbcd4f0",
    "metadata": {},
    "outputs": [
@@ -88,20 +90,6 @@
     "    else:\n",
     "        epsg_code = '327' + utm\n",
     "    return epsg_code\n",
-    "\n",
-    "\n",
-    "def interpolate_geolocation(lat, lon, target_shape):\n",
-    "    \"\"\" Interpolate the geolocation data to the target shape \"\"\"\n",
-    "    lat_int = RGI((np.arange(lat.shape[0]), np.arange(lat.shape[1])), lat)\n",
-    "    lon_int = RGI((np.arange(lon.shape[0]), np.arange(lon.shape[1])), lon)\n",
-    "    target_coords = np.meshgrid(\n",
-    "        np.linspace(0, lat.shape[0] - 1, target_shape[0]), \n",
-    "        np.linspace(0, lon.shape[1] - 1, target_shape[1]), \n",
-    "        indexing='ij')\n",
-    "    target_coords = np.stack(target_coords, axis=-1)\n",
-    "    lat_res = lat_int(target_coords)\n",
-    "    lon_res = lon_int(target_coords)\n",
-    "    return lat_res, lon_res\n",
     "\n",
     "\n",
     "def subset_array(array, areaDef, boundingCoords):\n",
@@ -150,10 +138,7 @@
     "    print(f\"latGEO shape: {lat.shape}\\nlonGEO shape: {lon.shape}\\nData Type: {type(lat)}\")\n",
     "\n",
     "    dims = lat.shape # shape of the swath coordinate array\n",
-    "\n",
-    "    # lat[lat == geo[latSD[0]].attrs['_FillValue']] = np.nan\n",
-    "    # lon[lon == geo[lonSD[0]].attrs['_FillValue']] = np.nan\n",
-    "\n",
+    "    \n",
     "    # Get the middle swatch latlon\n",
     "    midLat, midLon = np.mean(lat), np.mean(lon) \n",
     "\n",
@@ -161,63 +146,88 @@
     "    utm_zone = utmLookup(midLat, midLon)\n",
     "    print(f\"UTM Zone of middle swath: {utm_zone}\")\n",
     "    \n",
-    "    ############################\n",
-    "    # Load data from NetCDF file\n",
+    "    ###################################################\n",
+    "    # Load data from NetCDF file (VNP14IMG or VJ114IMG)\n",
     "    ds = Dataset(fireDA, 'r')\n",
     "\n",
     "    # Check if it is day or night\n",
     "    daynight = ds.getncattr('DayNightFlag')\n",
+    "\n",
+    "    # Grab the fire mask (full array)\n",
+    "    fire_mask = ds.variables['fire mask'][:]\n",
     "    \n",
     "    # Grab the Fire Pixel information (sparse arrays representing only pixel locations of active fire detections)\n",
     "    FP_power = ds.variables['FP_power'][:]\n",
     "    FP_latitude = ds.variables['FP_latitude'][:]\n",
     "    FP_longitude = ds.variables['FP_longitude'][:]\n",
     "\n",
-    "    # Grab the fire mask (full array)\n",
-    "    fire_mask = ds.variables['fire mask'][:]\n",
+    "    del ds # clean up, we have the arrays we need\n",
     "\n",
-    "    # Debugging prints\n",
-    "    print(f\"FP_power shape: {FP_power.shape}\") # see the sparse array\n",
-    "    print(f\"FP_latitude shape: {FP_latitude.shape}\")\n",
-    "    print(f\"FP_longitude shape: {FP_longitude.shape}\")\n",
-    "    print(f\"Fire Mask shape: {fire_mask.shape}\") # see the full array\n",
+    "    # # Debugging prints\n",
+    "    # print(f\"FP_power shape: {FP_power.shape}\") # see the sparse array\n",
+    "    # print(f\"FP_latitude shape: {FP_latitude.shape}\")\n",
+    "    # print(f\"FP_longitude shape: {FP_longitude.shape}\")\n",
+    "    # print(f\"Fire Mask shape: {fire_mask.shape}\") # see the full array\n",
     "\n",
-    "    # Resample the latlon SDS shape to match the fire mask (750m geolocation to 375m)\n",
-    "    lat_res, lon_res = interpolate_geolocation(lat, lon, fire_mask.shape)\n",
-    "    print(f\"Resampled lat shape: {lat_res.shape}, Resampled lon shape: {lon_res.shape}\")\n",
+    "    ##########################################################################\n",
+    "    # Create the swath definition, area definition, and projection information\n",
     "    \n",
-    "    # Create swath and area definition using coordinate arrays and projection information\n",
-    "    swathDef = geom.SwathDefinition(lons=lon_res, lats=lat_res) # from 'pyresample' geom\n",
-    "    epsg, proj, pName = '4326', 'latlong', 'Geographic'  # Set output projection to Geographic CRS\n",
-    "    llLon, llLat, urLon, urLat = np.nanmin(lon_res), np.nanmin(lat_res), np.nanmax(lon_res), np.nanmax(lat_res)\n",
+    "    # create the swath definition from latlon arrays\n",
+    "    swathDef = geom.SwathDefinition(lons=lon, lats=lat) # from 'pyresample' geom\n",
+    "\n",
+    "    # Create area definition using coordinate arrays and projection information\n",
+    "    # Use info from aeqd bbox to calculate output cols/rows/pixel size\n",
+    "    epsgConvert = pyproj.Proj(\"+proj=aeqd +lat_0={} +lon_0={}\".format(midLat_res, midLon_res))\n",
+    "    llLon, llLat = epsgConvert(np.min(lon_res), np.min(lat_res), inverse=False)\n",
+    "    urLon, urLat = epsgConvert(np.max(lon_res), np.max(lat_res), inverse=False)\n",
     "    areaExtent = (llLon, llLat, urLon, urLat)\n",
-    "    projDict = {'proj': proj, 'datum': 'WGS84'}\n",
+    "    cols = int(round((areaExtent[2] - areaExtent[0])/375))  # 375 m pixel size\n",
+    "    rows = int(round((areaExtent[3] - areaExtent[1])/375))\n",
+    "    '''Use no. rows and columns generated above from the aeqd projection\n",
+    "                to set a representative number of rows and columns, which will then be translated\n",
+    "                to degrees below, then take the smaller of the two pixel dims to determine output size'''\n",
+    "    epsg, proj, pName = '4326', 'longlat', 'Geographic'\n",
+    "    llLon, llLat, urLon, urLat = np.min(lon_res), np.min(lat_res), np.max(lon_res), np.max(lat_res)\n",
+    "    areaExtent = (llLon, llLat, urLon, urLat)\n",
+    "    projDict = pyproj.CRS(\"epsg:4326\")\n",
+    "    areaDef = geom.AreaDefinition(epsg, pName, proj, projDict, cols, rows, areaExtent)\n",
+    "    ps = np.min([areaDef.pixel_size_x, areaDef.pixel_size_y])  # Square pixels\n",
     "\n",
-    "    # Calculate the pixel dimensions, cols, and rows\n",
-    "    ps = np.min([abs(areaExtent[2] - areaExtent[0]) / fire_mask.shape[1],\n",
-    "                 abs(areaExtent[3] - areaExtent[1]) / fire_mask.shape[0]]) \n",
-    "    # ps = 0.00333663072035137202  # Hard-coded estimate of pixel size in degrees\n",
-    "    cols = int(round((areaExtent[2] - areaExtent[0]) / ps))  # Calculate the output cols\n",
-    "    rows = int(round((areaExtent[3] - areaExtent[1]) / ps))  # Calculate the output rows\n",
+    "    # Now, recalculate the cols, rows, and area definition\n",
+    "    cols = int(round((areaExtent[2] - areaExtent[0])/ps))  # Calculate the output cols\n",
+    "    rows = int(round((areaExtent[3] - areaExtent[1])/ps))  # Calculate the output rows\n",
+    "    areaDef = geom.AreaDefinition(epsg, pName, proj, projDict, cols, rows, areaExtent)\n",
+    "    \n",
+    "    # epsg, proj, pName = '4326', 'latlong', 'Geographic'  # Set output projection to Geographic CRS\n",
+    "    # llLon, llLat, urLon, urLat = np.nanmin(lon_res), np.nanmin(lat_res), np.nanmax(lon_res), np.nanmax(lat_res)\n",
+    "    # areaExtent = (llLon, llLat, urLon, urLat)\n",
+    "    # projDict = {'proj': proj, 'datum': 'WGS84'}\n",
+    "    # # Calculate the pixel dimensions, cols, and rows\n",
+    "    # ps = np.min([abs(areaExtent[2] - areaExtent[0]) / fire_mask.shape[1],\n",
+    "    #              abs(areaExtent[3] - areaExtent[1]) / fire_mask.shape[0]]) \n",
+    "    # # ps = 0.00333663072035137202  # Hard-coded estimate of pixel size in degrees\n",
+    "    # cols = int(round((areaExtent[2] - areaExtent[0]) / ps))  # Calculate the output cols\n",
+    "    # rows = int(round((areaExtent[3] - areaExtent[1]) / ps))  # Calculate the output rows\n",
+    "    # # Create the area definition\n",
+    "    # areaDef = geom.AreaDefinition(epsg, pName, epsg, projDict, cols, rows, areaExtent) \n",
+    "    \n",
+    "    print(f\"Pixel Dims: {ps};\\nNumber of columns: {cols};\\nNumber of rows: {rows}\\nArea definition shape: {areaDef.shape}\")\n",
     "\n",
-    "    print(f\"Pixel Dims: {ps};\\nNumber of columns: {cols};\\nNumber of rows: {rows}\")\n",
-    "\n",
-    "    # Define output geometry and set up resampling\n",
-    "    areaDef = geom.AreaDefinition(epsg, pName, epsg, projDict, cols, rows, areaExtent) \n",
+    "    ###################################################\n",
+    "    # Perform nearest neighbor sampling (SWATH to GRID)\n",
+    "    \n",
+    "    # Get the neighbor info using radius of influence 3x pixel dims\n",
     "    index, outdex, indexArr, distArr = kdt.get_neighbour_info(swathDef, areaDef, 1125, neighbours=1)\n",
-    "\n",
-    "    print(f'Area Definition Shape: {areaDef.shape}')\n",
-    "\n",
+    "    \n",
     "    # Perform kdtree resampling (swath 2 grid conversion) --- for the fire mask\n",
-    "    fv = -9999\n",
+    "    fv = -9999 # for the uint data type of the fire mask\n",
     "    sdGEO = kdt.get_sample_from_neighbour_info('nn', areaDef.shape, fire_mask, index, outdex, indexArr, fill_value=fv)\n",
     "\n",
     "    # Create a full grid for FP_power based on the fire mask grid using pyresample's kd_tree.resample_nearest\n",
     "    fv = np.nan\n",
-    "    \n",
-    "    # Create a new swatch definition\n",
+    "    # Create a new swath definition\n",
     "    swathDef_fire = geom.SwathDefinition(lons=FP_longitude, lats=FP_latitude) # fll is within the geometry bounds\n",
-    "    FP_power_grid = kdt.resample_nearest(swathDef_fire, FP_power, areaDef, radius_of_influence=375, fill_value=fv)\n",
+    "    FP_power_grid = kdt.resample_nearest(swathDef_fire, FP_power, areaDef, radius_of_influence=1, fill_value=fv)\n",
     "    \n",
     "    # # Subset the FRP grid using the fire perimeter coordinates\n",
     "    # coords_array = np.array(geomCoords)\n",
@@ -286,20 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "54bce8bb-50a9-4d94-929a-a32dbd80fd77",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VJ103MODLL/VJ103MODLL.A2021243.1000.021.2021243163653.h5\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP14IMG/VNP14IMG.A2021242.2048.002.2024074102039.nc\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VJ114IMG/VJ114IMG.A2021239.0936.002.2024081210828.nc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing for one fire\n",
     "testDir = os.path.join(datadir,'FIRED_3518')\n",
@@ -323,25 +323,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e7c8b8e6-6cdf-486e-ae63-6cdb78b2b725",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['fired_id', 'ig_date', 'ig_day', 'ig_month', 'ig_year', 'last_date',\n",
-      "       'event_dur', 'tot_pix', 'tot_ar_km2', 'fsr_px_dy', 'fsr_km2_dy',\n",
-      "       'mx_grw_px', 'mn_grw_px', 'mu_grw_px', 'mx_grw_km2', 'mn_grw_km2',\n",
-      "       'mu_grw_km2', 'mx_grw_dte', 'x', 'y', 'ig_utm_x', 'ig_utm_y', 'lc_code',\n",
-      "       'lc_mode', 'lc_name', 'lc_desc', 'lc_type', 'eco_mode', 'eco_name',\n",
-      "       'eco_type', 'tot_perim', 'pct_aspen', 'geometry'],\n",
-      "      dtype='object')\n",
-      "102\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load fire data and create a dictionary with bounding coordinates\n",
     "fires_path = os.path.join(maindir,'Aim2/data/spatial/mod/FIRED/fired_events_west_aspen.gpkg')\n",
@@ -352,20 +337,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "215e769d-bd0a-4fdf-b209-256add7d6618",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FIRED_ID: 3518, \n",
-      "Bounding Coordinates: \n",
-      "[(-113.4870457742665, 37.31747928447832), (-113.45119936806327, 37.31747928447832), (-113.45119936806327, 37.336690972515356), (-113.4870457742665, 37.336690972515356), (-113.4870457742665, 37.31747928447832)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a dictionary to store fire bounding coordinates\n",
     "coords_dict = {}\n",
@@ -384,36 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "db720c6c-ed34-4b2e-8076-e3914d3eadcf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing NetCDF files for VNP14IMG\n",
-      "There are 34 associated geolocation files ...\n",
-      "VNP14IMG.A2021242.2048.002.2024074102039\n",
-      "['/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP03MODLL/VNP03MODLL.A2021242.2048.002.2024017150503.h5']\n",
-      "latGEO shape: (3232, 3200)\n",
-      "lonGEO shape: (3232, 3200)\n",
-      "Data Type: <class 'numpy.ndarray'>\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'utm_zone' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 43\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(geo)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m###################################\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# Now apply our processing function\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m \u001b[43mviirs_swath2grid\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfireDA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgeoDA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgeo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mshortName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshort_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43msdsName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mecoSDS\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mecoSDS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgeomCoords\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcoords_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m    \u001b[49m\u001b[43mout_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout_dir\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# # Update the maximum FRP array\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m# if daynight == \"Day\":\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m#     # Update the maximum FRP grid\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;66;03m#     else:\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;66;03m#         max_frp_night = np.maximum(max_frp_night, maxFRP)\u001b[39;00m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTime to complete granule:\u001b[39m\u001b[38;5;124m'\u001b[39m, time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m t0)\n",
-      "Cell \u001b[0;32mIn[2], line 93\u001b[0m, in \u001b[0;36mviirs_swath2grid\u001b[0;34m(fireDA, geoDA, shortName, sdsName, ecoSDS, geomCoords, out_dir)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;66;03m# Identify the UTM Zone of the middle swath\u001b[39;00m\n\u001b[1;32m     92\u001b[0m utm_zome \u001b[38;5;241m=\u001b[39m utmLookup(midLat, midLon)\n\u001b[0;32m---> 93\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUTM Zone of middle swath: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mutm_zone\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     95\u001b[0m \u001b[38;5;66;03m############################\u001b[39;00m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;66;03m# Load data from NetCDF file\u001b[39;00m\n\u001b[1;32m     97\u001b[0m ds \u001b[38;5;241m=\u001b[39m Dataset(fireDA, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'utm_zone' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t0 = time.time()\n",
     "\n",
