Update to viirs_swath2grid

--- a/Aim2/code/Python/viirs_download-swath.ipynb
+++ b/Aim2/code/Python/viirs_download-swath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "d1ec03ae-2946-4baf-a5f7-f722a615f19e",
    "metadata": {},
    "outputs": [
@@ -692,11 +692,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2b059333-a117-4896-a17a-f672c286e4db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fp_points.to_file(os.path.join(dataoutdir,'viirs_fp_latlon_points.gpkg'))"
+   ]
   }
  ],
  "metadata": {
