--- a/Aim2/code/Python/viirs_swath2grid-MaxFRP.ipynb
+++ b/Aim2/code/Python/viirs_swath2grid-MaxFRP.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "1b3a3566-b1cd-4ca3-8c29-4c157fbcd4f0",
    "metadata": {},
    "outputs": [
@@ -114,6 +114,52 @@
     "    return array[row_start:row_end, col_start:col_end]\n",
     "\n",
     "\n",
+    "def create_global_grid(resolution=375):\n",
+    "    \"\"\" Creates a global sinusoidal grid at the given resolution \"\"\"\n",
+    "    # Sinusoidal projection parameters\n",
+    "    radius = 6371007.181  # Radius of Earth in meters\n",
+    "    pixel_size = resolution  # Pixel size in meters\n",
+    "\n",
+    "    # Calculate the number of columns and rows\n",
+    "    cols = int((2 * np.pi * radius) / pixel_size)\n",
+    "    rows = int((np.pi * radius) / pixel_size)\n",
+    "\n",
+    "    # Define the area extent in meters for the sinusoidal projection\n",
+    "    area_extent = (-radius * np.pi, -radius * 0.5 * np.pi, radius * np.pi, radius * 0.5 * np.pi)\n",
+    "\n",
+    "    # Create the sinusoidal projection string\n",
+    "    proj_str = (\n",
+    "        'PROJCS[\"unnamed\",'\n",
+    "        'GEOGCS[\"Unknown datum based upon the custom spheroid\", '\n",
+    "        'DATUM[\"Not specified (based on custom spheroid)\", '\n",
+    "        'SPHEROID[\"Custom spheroid\",6371007.181,0]], '\n",
+    "        'PRIMEM[\"Greenwich\",0],'\n",
+    "        'UNIT[\"degree\",0.0174532925199433]],'\n",
+    "        'PROJECTION[\"Sinusoidal\"], '\n",
+    "        'PARAMETER[\"longitude_of_center\",0], '\n",
+    "        'PARAMETER[\"false_easting\",0], '\n",
+    "        'PARAMETER[\"false_northing\",0], '\n",
+    "        'UNIT[\"Meter\",1]]'\n",
+    "    )\n",
+    "\n",
+    "    # Create the area definition using pyresample\n",
+    "    area_def = geom.AreaDefinition(\n",
+    "        'sinusoidal', 'Global Sinusoidal', proj_str,\n",
+    "        {\n",
+    "            'proj': 'sinu',\n",
+    "            'lon_0': 0,\n",
+    "            'x_0': 0,\n",
+    "            'y_0': 0,\n",
+    "            'a': radius,\n",
+    "            'b': radius,\n",
+    "            'units': 'm'\n",
+    "        },\n",
+    "        cols, rows, area_extent\n",
+    "    )\n",
+    "\n",
+    "    return area_def\n",
+    "    \n",
+    "\n",
     "def export_geotiff(da_array, out_file_name, geotransform, epsg, na_data_val):\n",
     "    \"\"\" Exports a data array as GeoTIFF with specified paramters \"\"\"\n",
     "    \"\"\"\n",
@@ -148,7 +194,7 @@
     "    d, band = None, None\n",
     "    \n",
     "\n",
-    "def viirs_swath2grid(fireDA, geoDA, shortName, sdsName, geomCoords, out_dir):\n",
+    "def viirs_swath2grid(fireDA, geoDA, shortName, sdsName, boundingCoords, out_dir):\n",
     "    \"\"\" Converts VIIRS AFD NetCDF SDS to grid and exports as GeoTIFF \"\"\"\n",
     "    \n",
     "    \"\"\"\n",
@@ -257,18 +303,22 @@
     "    swathDef_fire = geom.SwathDefinition(lons=FP_longitude, lats=FP_latitude) # fll is within the geometry bounds\n",
     "    index, outdex, indexArr, distArr = kdt.get_neighbour_info(swathDef_fire, areaDef, 375, neighbours=1)\n",
     "    FP_power_grid = kdt.get_sample_from_neighbour_info('nn', areaDef.shape, FP_power, index, outdex, indexArr, fill_value=fv)\n",
-    "    # FP_power_grid = kdt.resample_nearest(swathDef, FP_power, areaDef, radius_of_influence=1125, fill_value=fv)\n",
-    "    \n",
-    "    # # Subset the FRP grid using the fire perimeter coordinates\n",
-    "    # coords_array = np.array(geomCoords)\n",
-    "    # FP_power_grid_s = subset_array(FP_power_grid, areaDef, coords_array)\n",
     "\n",
-    "    # del sdGEO # clean up\n",
+    "    ###################################################################################\n",
+    "    # Mask the FRP grid to include only active fire pixels (nominal or high confidence)\n",
+    "    fire_pixels = (sdGEO == 8) | (sdGEO == 9)\n",
+    "    FP_power_grid[~fire_pixels] = np.nan # Set areas outside the active fire detections as NaN\n",
+    "    # Further mask the array by a bounding geometry\n",
     "\n",
-    "    # Mask the FRP grid to include only active fire pixels\n",
-    "    fire_pixels = (sdGEO == 7) | (sdGEO == 8) | (sdGEO == 9)\n",
-    "    FRP_grid[~fire_pixels] = np.nan\n",
-    "    \n",
+    "    ########################################################################\n",
+    "    # Define a global sinusoidal grid and resample the swath grid to it    #\n",
+    "\n",
+    "    index, outdex, indexArr, distArr = kdt.get_neighbour_info(areaDef, global_area_def, 375, neighbours=1)\n",
+    "    sdGEO_res = kdt.get_sample_from_neighbour_info('nn', global_area_def.shape, sdGEO, index, outdex, indexArr, fill_value=fv)\n",
+    "    # FP_power_grid_res = kdt.get_sample_from_neighbour_info('nn', global_area_def.shape, FP_power_grid, index, outdex, indexArr, fill_value=np.nan)\n",
+    "\n",
+    "\n",
+    "    ############################################\n",
     "    # Set up the GeoTIFF export for day or night\n",
     "    outDir = os.path.join(out_dir, f'georeferenced/{shortName}/{daynight}')\n",
     "    # Check the directory exists, make it if not\n",
@@ -286,7 +336,7 @@
     "    export_geotiff(FP_power_grid, outName, gt, epsg, fv)\n",
     "\n",
     "    outName = outName.replace(\"FP_power\", \"fire_mask\")\n",
-    "    export_geotiff(sdGEO, outName, gt, epsg, fv)\n",
+    "    export_geotiff(sdGEO_res, outName, gt, epsg, fv)\n",
     "\n",
     "\n",
     "def get_coords(geom, buffer):\n",
@@ -404,6 +454,7 @@
    ],
    "source": [
     "# Create a dictionary to store fire bounding coordinates\n",
+    "# These can be used to subset the arrays before exporting the data\n",
     "coords_dict = {}\n",
     "buffer = 375 \n",
     "\n",
@@ -420,7 +471,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
+   "id": "ef36fc5e-e207-46aa-ac30-4bba08f8111f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(53373, 106747)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a the global sinusoidal grid\n",
+    "global_area_def = create_global_grid()\n",
+    "print(global_area_def.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "db720c6c-ed34-4b2e-8076-e3914d3eadcf",
    "metadata": {},
    "outputs": [
@@ -443,43 +514,7 @@
       "Pixel Dims: 0.0034526084770449017;\n",
       "Number of columns: 11060;\n",
       "Number of rows: 7308\n",
-      "Area definition shape: (7308, 11060)\n",
-      "\n",
-      "output file:\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/georeferenced/VNP14IMG/Day/FP_power_VNP14IMG_A2021242_2048.tif\n",
-      "\n",
-      "Time to complete granule: 27.541932821273804\n",
-      "\n",
-      "\n",
-      "---------------------------------------------\n",
-      "VNP14IMG.A2021240.1948.002.2024074100504\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP03IMG/VNP03IMG.A2021240.1948.002.2021264131150.nc\n",
-      "latGEO shape: (6496, 6400)\n",
-      "lonGEO shape: (6496, 6400)\n",
-      "Data Type: <class 'numpy.ndarray'>\n",
-      "UTM Zone of middle swath: 32613\n",
-      "FP_power shape: (532,)\n",
-      "FP_latitude shape: (532,)\n",
-      "FP_longitude shape: (532,)\n",
-      "Fire Mask shape: (6496, 6400)\n",
-      "Pixel Dims: 0.0036086062778657997;\n",
-      "Number of columns: 12559;\n",
-      "Number of rows: 7172\n",
-      "Area definition shape: (7172, 12559)\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 39\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m###################################\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m# Now apply our processing function\u001b[39;00m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 39\u001b[0m     \u001b[43mviirs_swath2grid\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     40\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfireDA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m        \u001b[49m\u001b[43mgeoDA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgeo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m        \u001b[49m\u001b[43mshortName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshort_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m        \u001b[49m\u001b[43msdsName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdat\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[43m        \u001b[49m\u001b[43mgeomCoords\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcoords_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[43m        \u001b[49m\u001b[43mout_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout_dir\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSkipping granule \u001b[39m\u001b[38;5;132;01m{\u001b[39;00midentifier\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[22], line 170\u001b[0m, in \u001b[0;36mviirs_swath2grid\u001b[0;34m(fireDA, geoDA, shortName, sdsName, geomCoords, out_dir)\u001b[0m\n\u001b[1;32m    164\u001b[0m gt \u001b[38;5;241m=\u001b[39m [areaDef\u001b[38;5;241m.\u001b[39marea_extent[\u001b[38;5;241m0\u001b[39m], ps, \u001b[38;5;241m0\u001b[39m, areaDef\u001b[38;5;241m.\u001b[39marea_extent[\u001b[38;5;241m3\u001b[39m], \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m-\u001b[39mps]\n\u001b[1;32m    166\u001b[0m \u001b[38;5;66;03m#####################################################\u001b[39;00m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;66;03m# Perform nearest neighbor sampling (SWATH to GRID) #\u001b[39;00m\n\u001b[1;32m    168\u001b[0m \n\u001b[1;32m    169\u001b[0m \u001b[38;5;66;03m# Get the neighbor info using radius of influence 3x pixel dims\u001b[39;00m\n\u001b[0;32m--> 170\u001b[0m index, outdex, indexArr, distArr \u001b[38;5;241m=\u001b[39m \u001b[43mkdt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_neighbour_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43mswathDef\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mareaDef\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m375\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mneighbours\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    171\u001b[0m \u001b[38;5;66;03m# Perform kdtree resampling (swath 2 grid conversion) --- for the fire mask\u001b[39;00m\n\u001b[1;32m    172\u001b[0m fv \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9999\u001b[39m \u001b[38;5;66;03m# for the uint8 data type of the fire mask\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/aspen-fire/lib/python3.10/site-packages/pyresample/kd_tree.py:353\u001b[0m, in \u001b[0;36mget_neighbour_info\u001b[0;34m(source_geo_def, target_geo_def, radius_of_influence, neighbours, epsilon, reduce_data, nprocs, segments)\u001b[0m\n\u001b[1;32m    347\u001b[0m appendable_distance_array \u001b[38;5;241m=\u001b[39m RowAppendableArray(target_geo_def\u001b[38;5;241m.\u001b[39msize)\n\u001b[1;32m    349\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m target_slice \u001b[38;5;129;01min\u001b[39;00m geometry\u001b[38;5;241m.\u001b[39m_get_slice(segments, target_geo_def\u001b[38;5;241m.\u001b[39mshape):\n\u001b[1;32m    350\u001b[0m \n\u001b[1;32m    351\u001b[0m     \u001b[38;5;66;03m# Query on slice of target coordinates\u001b[39;00m\n\u001b[1;32m    352\u001b[0m     next_voi, next_ia, next_da \u001b[38;5;241m=\u001b[39m \\\n\u001b[0;32m--> 353\u001b[0m         \u001b[43m_query_resample_kdtree\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresample_kdtree\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msource_geo_def\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    354\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mtarget_geo_def\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    355\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mradius_of_influence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_slice\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    356\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mneighbours\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mneighbours\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    357\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mepsilon\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mepsilon\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    358\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mreduce_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mreduce_data\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    359\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mnprocs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnprocs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    361\u001b[0m     appendable_valid_output_index\u001b[38;5;241m.\u001b[39mappend_row(next_voi)\n\u001b[1;32m    362\u001b[0m     appendable_index_array\u001b[38;5;241m.\u001b[39mappend_row(next_ia)\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/aspen-fire/lib/python3.10/site-packages/pyresample/kd_tree.py:545\u001b[0m, in \u001b[0;36m_query_resample_kdtree\u001b[0;34m(resample_kdtree, source_geo_def, target_geo_def, radius_of_influence, data_slice, neighbours, epsilon, reduce_data, nprocs)\u001b[0m\n\u001b[1;32m    542\u001b[0m output_coords \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(output_coords, dtype\u001b[38;5;241m=\u001b[39mdt)\n\u001b[1;32m    544\u001b[0m \u001b[38;5;66;03m# Query kd-tree\u001b[39;00m\n\u001b[0;32m--> 545\u001b[0m distance_array, index_array \u001b[38;5;241m=\u001b[39m \u001b[43mresample_kdtree\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_coords\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    546\u001b[0m \u001b[43m                                                    \u001b[49m\u001b[43mk\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mneighbours\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    547\u001b[0m \u001b[43m                                                    \u001b[49m\u001b[43meps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mepsilon\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    548\u001b[0m \u001b[43m                                                    \u001b[49m\u001b[43mdistance_upper_bound\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mradius_of_influence\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    550\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m valid_output_index, index_array, distance_array\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Area definition shape: (7308, 11060)\n"
      ]
     }
    ],
@@ -527,12 +562,12 @@
     "                geoDA=geo, \n",
     "                shortName=short_name, \n",
     "                sdsName=dat,\n",
-    "                geomCoords=coords_, \n",
+    "                boundingCoords=coords_, \n",
     "                out_dir=out_dir\n",
     "            )\n",
     "        except Exception as e:\n",
     "            print(f\"Skipping granule {identifier}\\n{e}\")\n",
-    "            traceback.print_exc()  # This will print the full traceback\n",
+    "            # traceback.print_exc()  # This will print the full traceback\n",
     "            continue  # continue to the next granule\n",
     "        \n",
     "        print('Time to complete granule:', time.time() - t0)\n",
